infrastructure/monitoring/kube-prometheus-stack/manifests/monitoring-httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: monitoring
  labels:
    crownlabs.polito.it/gw-access: "crownlabs-main-production"
    crownlabs.polito.it/public-route: "true"
spec:
  parentRefs:
  - name: crownlabs-main
    namespace: crownlabs-production
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
  hostnames:
  - "grafana.crownlabs.polito.it"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-httproute
  namespace: monitoring
  labels:
    crownlabs.polito.it/gw-access: "crownlabs-main-production"
spec:
  parentRefs:
  - name: crownlabs-main
    namespace: crownlabs-production
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-prometheus
      port: 9090
  hostnames:
  - "prometheus.crownlabs.polito.it"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-httproute
  namespace: monitoring
  labels:
    crownlabs.polito.it/gw-access: "crownlabs-main-production"
spec:
  parentRefs:
  - name: crownlabs-main
    namespace: crownlabs-production
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-alertmanager
      port: 9093
  hostnames:
  - "alertmanager.crownlabs.polito.it"
